fixed mobile background not showing by removing mix-blend-mode, updating background ul and setting blur z index to 1, fixed blue color of the pricing button text on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 }
 
 .app-container {
+  background: url('./assets/imgs/background.png');
   background-color: var(--appColor);
   display: flex;
   flex-direction: column;
@@ -62,5 +63,5 @@
   /* blur effect */
   filter: blur(200px);
   /* always push to the back */
-  z-index: -9;
+  z-index: 1;
 }
