--- a/src/style/Pricing.css
+++ b/src/style/Pricing.css
@@ -83,6 +83,11 @@
     gap: 0.5rem;
 }
 
+.pricing-btn {
+    color: rgb(49, 47, 49);
+}
+
+
 .pricing-btn:hover {
     color: var(--purple);
 }
